# rm-codes-opencl

./: BFVectorCalculator.h  Butterfly.h  CMakeLists.txt  IntToBinaryConverter.h  LinearCoefsExtractor.h  OpenCLExecutor.h  RMCode.h  RealAnalogTransformer.h  VectorExpander.h  bf_vector_calculator.cpp  butterfly.cpp  int_to_binary_converter.cpp  linear_coefs_extractor.cpp  main.cpp  real_analog_transformer.cpp  utils.h  vector_expander.cpp
